fixed layout on smaller screens?

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
 	width: 450px;
 	height: 450px;
 	padding: 0.7%;
+	margin-left: 70%;
 	
 }
 .picrew2 {
